[package]
name = "image_conversion"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
axum-msgpack = "0.4"
image = { version = "0.24", default-features = false, features = [
    "avif",
    "avif-decoder",
    "jpeg",
    "png",
    "webp",
    "webp-encoder",
] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
